# mock-api-server-commit

./: .gitignore  Dockerfile  TASKS.md  compose.yaml  debian_packages.txt  pyproject.toml  readme.md  test_cases.md
app/: mock.py
app/responses/: guids.json  inventory_devices.json
app/routes/: common_helper.py  inventory_devices.py  inventory_files.py
database/: empty.sql
postgres_db_tests/: .env  config.py  test_queries.py
rsa-cert-generation/: create_certs.sh  intermediate-openssl.conf  root-openssl.conf
saucedemo/: conftest.py
saucedemo/pages/: add_to_cart_page.py  base_page.py  checkout_complete_page.py  checkout_page.py  login_page.py  logout_page.py
saucedemo/tests/: test_add_to_cart.py  test_checkout.py  test_checkout_complete.py  test_login.py  test_logout.py
tests/: config.json  configuration.py  test_inventory.py  test_inventory_https.py
tests/certs/: ca_bundle.pem
