[tool.poetry]
name = "mock-api-server"
version = "0.1.0"
description = ""
authors = ["Liubomyr Pavlovskyi <zzee19191919@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
